--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ sklearn==0.0
 scikit-image==0.15.0
 scikit-learn==0.22.2.post1
 scikit-learn-extra==0.1.0b2
-pymssql==2.1.4
+pymssql
 requests==2.22.0
 idna==2.8
 gunicorn==20.0.4python-dotenv
